fix announcement being cut off

--- a/public/css/non-admin.css
+++ b/public/css/non-admin.css
@@ -7416,18 +7416,7 @@ body {
 .Annimate__Text {
   font-weight: bold;
   color: #b2dbfb;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  line-height: 50px;
-  text-align: center;
-  /* Starting position */
-  -webkit-transform: translateX(100%);
-  transform: translateX(100%);
-  /* Apply animation to this element */
-  -webkit-animation: Annimate 15s linear infinite;
-  animation: Annimate 15s linear infinite; }
+  font-size: 1.6em; }
 
 /* Move it (define the animation) */
 
