--- a/resources/assets/sass/non-admin/pages/home.scss
+++ b/resources/assets/sass/non-admin/pages/home.scss
@@ -30,23 +30,23 @@
      overflow: hidden;
      position: relative;
 }
+
 .Annimate__Text {
     font-weight: bold;
     color: #b2dbfb;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    line-height: 50px;
-    text-align: center;
-    /* Starting position */
-    -moz-transform:translateX(100%);
-    -webkit-transform:translateX(100%);    
-    transform:translateX(100%);
-    /* Apply animation to this element */  
-    -moz-animation: Annimate 15s linear infinite;
-    -webkit-animation: Annimate 15s linear infinite;
-    animation: Annimate 15s linear infinite;
+    font-size: 1.6em;
+    // position: absolute;
+    // width: 100%;
+    // height: 100%;
+    // margin: 0;
+    // line-height: 50px;
+    // text-align: center;
+    // -moz-transform:translateX(100%);
+    // -webkit-transform:translateX(100%);    
+    // transform:translateX(100%);
+    // -moz-animation: Annimate 15s linear infinite;
+    // -webkit-animation: Annimate 15s linear infinite;
+    // animation: Annimate 15s linear infinite;
 }
 /* Move it (define the animation) */
 @-moz-keyframes Annimate {
